--- a/src/light/pink.yml
+++ b/src/light/pink.yml
@@ -151,7 +151,7 @@ colors:
   activityBar.background        : *BGLight # Activity Bar background color
   activityBar.inactiveForeground: *COMMENT # Activity bar item foreground color when it is inactive
   activityBar.dropBackground    : # Drag and drop feedback color for the Activity Bar items
-  activityBar.foreground        : *FG # Activity bar foreground color (for example used for the icons)
+  activityBar.foreground        : *KEYWORD # Activity bar foreground color (for example used for the icons)
   activityBar.border            : *BORDER # Activity Bar border color with the Side Bar
   activityBar.activeBorder      : *KEYWORD # Activity Bar indicator color
   activityBar.activeBackground  : *BGDarker # Activity Bar indicator background color
@@ -178,8 +178,8 @@ colors:
   tab.activeBackground           : *BG # Active Tab background color
   tab.activeForeground           : *FG # Active Tab foreground color in an active group
   tab.border                     : *BORDER # Border to separate Tabs from each other
-  tab.activeBorderTop            : *GREEN # A border drawn to the top of the active tab
-  tab.activeBorder               : # A border drawn to the bottom of the active tab
+  tab.activeBorderTop            : *KEYWORD # A border drawn to the top of the active tab
+  tab.activeBorder               :  # A border drawn to the bottom of the active tab
   tab.unfocusedActiveBorder      : # A border drawn to the bottom of the active tab in an editor group that is not focused
   tab.inactiveBackground         : *BGDark # Inactive Tab background color
   tab.inactiveForeground         : *COMMENT # Inactive Tab foreground color in an active group
@@ -190,8 +190,8 @@ colors:
   editor.foreground                : *FG
   editor.background                : *BG
   editorLineNumber.foreground      : *LINE_NUMBER
-  editorLineNumber.activeForeground: *GREEN # 当前行的行号前景色
-  editorCursor.foreground          : *GREEN
+  editorLineNumber.activeForeground: *KEYWORD # 当前行的行号前景色
+  editorCursor.foreground          : *KEYWORD
 
   editor.selectionBackground         : *SELECTION # Color of the editor selection
   editor.selectionHighlightBackground: *SELECTED # Color for regions with the same content as the selection
