improve: 修改 Banner 颜色

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     ],
     "icon": "icon.png",
     "galleryBanner": {
-        "color": "#e4ecef",
+        "color": "#E0F2F1",
         "theme": "light"
     },
     "previewImages": [
