--- a/src/light/yellow.yml
+++ b/src/light/yellow.yml
@@ -7,17 +7,18 @@ semanticClass: theme.pink
 semanticHighlighting: true
 pink:
   base:
-    - &BG        '#FDF5F6'
+    - &BG        '#FFFBE8'
+    - &BGER        '#917800'
     - &FG        '#383A42'
-    - &SELECTION '#FFD6E0'
+    - &SELECTION '#CCC8B6'
     - &COMMENT   '#9DA0A8'
     - &CYAN      '#007297'
     - &PURPLE    '#643CB8'
     - &ORANGE    '#8D4532'
-    - &KEYWORD   '#B7447B'
     - &GREEN     '#067D17'
     - &BLUE      '#174ad4'
     - &RED       '#FF5555'
+    - &KEYWORD   '#067D17'
   ansi:
     - &COLOR0        '#383A42'
     - &COLOR1        '#FF5555'
@@ -40,22 +41,22 @@ pink:
     - &TEMP_QUOTES          '#067D17'
     - &TEMP_PROPERTY_QUOTES '#067D17'
   other:
-    - &LineHighlight '#FFE6E7'
+    - &LineHighlight '#EEE8D5'
     - &NonText       '#FFFFFF1A'
     - &WHITE         '#FFFFFF'
     - &TAB_DROP_BG   '#F7F8FA70'
     # UI Variants
-    - &BGLighter     '#FDF5F6'
-    - &BGLight       '#FDF5F6' # HSV (230   , 25.71, 27.45)
-    - &BGDark        '#FDF5F6' # HSV (234.55, 25   , 17.25)
-    - &BGDarker      '#FFD6E0' # HSV (234.55, 25   , 13   )
-    - &BORDER        '#f3ebec'
+    - &BGLighter     '#FFFBE8'
+    - &BGLight       '#FFFBE8' # HSV (230   , 25.71, 27.45)
+    - &BGDark        '#FFFBE8' # HSV (234.55, 25   , 17.25)
+    - &BGDarker      '#ccc8b6' # HSV (234.55, 25   , 13   )
+    - &BORDER        '#f5f1de'
     - &STATIC        '#871790'
     - &ANNOTATION    '#9e880d' # HSV (234.55, 25   , 13   )
     - &INDENT_GUIDE '#f1edef'
-    - &MATCHED_INDENT_GUIDE '#FFD6E0'
+    - &MATCHED_INDENT_GUIDE '#ddb900'
     - &LINE_NUMBER '#aeb3c2'
-    - &SELECTED '#FFD6E0'
+    - &SELECTED '#ddb900'
 
 # User Interface (more info: https://code.visualstudio.com/docs/getstarted/theme-color-reference)
 colors:
@@ -151,11 +152,11 @@ colors:
   activityBar.background        : *BGLight # Activity Bar background color
   activityBar.inactiveForeground: *COMMENT # Activity bar item foreground color when it is inactive
   activityBar.dropBackground    : # Drag and drop feedback color for the Activity Bar items
-  activityBar.foreground        : *KEYWORD # Activity bar foreground color (for example used for the icons)
+  activityBar.foreground        : *BGER # Activity bar foreground color (for example used for the icons)
   activityBar.border            : *BORDER # Activity Bar border color with the Side Bar
-  activityBar.activeBorder      : *KEYWORD # Activity Bar indicator color
+  activityBar.activeBorder      : *BGER # Activity Bar indicator color
   activityBar.activeBackground  : *BGDarker # Activity Bar indicator background color
-  activityBarBadge.background   : *KEYWORD # Activity notification badge background color
+  activityBarBadge.background   : *BGER # Activity notification badge background color
   activityBarBadge.foreground   : *WHITE # Activity notification badge foreground color
 
   # Side Bar
@@ -178,7 +179,7 @@ colors:
   tab.activeBackground           : *BG # Active Tab background color
   tab.activeForeground           : *FG # Active Tab foreground color in an active group
   tab.border                     : *BORDER # Border to separate Tabs from each other
-  tab.activeBorderTop            : *KEYWORD # A border drawn to the top of the active tab
+  tab.activeBorderTop            : *BGER # A border drawn to the top of the active tab
   tab.activeBorder               :  # A border drawn to the bottom of the active tab
   tab.unfocusedActiveBorder      : # A border drawn to the bottom of the active tab in an editor group that is not focused
   tab.inactiveBackground         : *BGDark # Inactive Tab background color
@@ -190,8 +191,8 @@ colors:
   editor.foreground                : *FG
   editor.background                : *BG
   editorLineNumber.foreground      : *LINE_NUMBER
-  editorLineNumber.activeForeground: *KEYWORD # 当前行的行号前景色
-  editorCursor.foreground          : *KEYWORD
+  editorLineNumber.activeForeground: *BGER # 当前行的行号前景色
+  editorCursor.foreground          : *BGER
 
   editor.selectionBackground         : *SELECTION # Color of the editor selection
   editor.selectionHighlightBackground: *SELECTED # Color for regions with the same content as the selection
@@ -340,8 +341,8 @@ colors:
   statusBarItem.hoverBackground         : # Status Bar item background color when hovering
   statusBarItem.prominentBackground     : *RED # Status Bar prominent items background color. Prominent items stand out from other Status Bar entries to indicate importance
   statusBarItem.prominentHoverBackground: *ORANGE # Status Bar prominent items background color when hovering. Prominent items stand out from other Status Bar entries to indicate importance
-  statusBarItem.remoteForeground        : *KEYWORD # Background color for the remote indicator on the status bar
-  statusBarItem.remoteBackground        : *SELECTED # Foreground color for the remote indicator on the status bar
+  statusBarItem.remoteForeground        : *WHITE # Background color for the remote indicator on the status bar
+  statusBarItem.remoteBackground        : *BGER # Foreground color for the remote indicator on the status bar
   statusBar.border                      : *BORDER
 
   # Title Bar Colors (MacOS Only)
