--- a/src/light/yellow.yml
+++ b/src/light/yellow.yml
@@ -326,7 +326,7 @@ colors:
   # Panel Colors
   panel.background             : *BG # Panel background color
   panel.border                 : *BORDER # Panel border color on the top separating to the editor
-  panelTitle.activeBorder      : *GREEN # Border color for the active panel title
+  panelTitle.activeBorder      : *BGER # Border color for the active panel title
   panelTitle.activeForeground  : *FG # Title color for the active panel
   panelTitle.inactiveForeground: *COMMENT # Title color for the inactive panel
 
