--- a/src/light/celadon.yml
+++ b/src/light/celadon.yml
@@ -194,17 +194,17 @@ colors:
 
   editor.selectionBackground         : *SELECTION # Color of the editor selection
   editor.selectionHighlightBackground: *SELECTED # Color for regions with the same content as the selection
-  editor.inactiveSelectionBackground : # Color of the selection in an inactive editor
+  editor.inactiveSelectionBackground : *SELECTION # Color of the selection in an inactive editor
   editor.foldBackground              : *SELECTION # Background color for folded ranges
 
-  editor.wordHighlightBackground      : !alpha [*SELECTION, 50] # Background color of a symbol during read-access, for example when reading a variable
-  editor.wordHighlightStrongBackground: !alpha [*SELECTED, 40] # Background color of a symbol during write-access, for example when writing to a variable
+  editor.wordHighlightBackground      : !alpha [*GREEN, 30] # Background color of a symbol during read-access, for example when reading a variable
+  editor.wordHighlightStrongBackground: !alpha [*GREEN, 30] # Background color of a symbol during write-access, for example when writing to a variable
 
-  editor.findMatchBackground         : !alpha [*ORANGE, 40]
-  editor.findMatchHighlightBackground: !alpha [*MATCHED_INDENT_GUIDE, 40] # Color of the other search matches
-  editor.findRangeHighlightBackground: *SELECTION # Color the range limiting the search
+  editor.findMatchBackground         : !alpha [*GREEN, 30]
+  editor.findMatchHighlightBackground: *SELECTED # Color of the other search matches
+  editor.findRangeHighlightBackground: *LineHighlight # Color the range limiting the search
 
-  editor.hoverHighlightBackground: !alpha [*MATCHED_INDENT_GUIDE, 50] # Highlight below the word for which a hover is shown
+  editor.hoverHighlightBackground: *SELECTION # Highlight below the word for which a hover is shown
 
   editor.lineHighlightBackground: *LineHighlight # Background color for the highlight of line at the cursor position
   editor.lineHighlightBorder    : *LineHighlight # Background color for the border around the line at the cursor position
